# smartboxes

./: .gitignore  .gitmodules  CMakeLists.txt  GraphicsHelper.cpp  GraphicsHelper.h  Robot.cpp  Robot.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  camera.cpp  camera.h  commandmanager.cpp  commandmanager.h  debugdraw.cpp  debugdraw.h  entitymanager.cpp  entitymanager.h  game.cpp  game.h  inputmanager.cpp  inputmanager.h  main.cpp  menu.cpp  menu.h  physicshelper.cpp  physicshelper.h  utils.h
Commands/: Box2DCommand.cpp  Box2DCommand.h  CreateBoxCommand.cpp  CreateBoxCommand.h  CreateRobotCommand.cpp  CreateRobotCommand.h  ICommand.h  LambdaCommand.cpp  LambdaCommand.h
RobotParts/: Entity.h  IRobotPart.h  RBody.cpp  RBody.h  RobotPart.cpp  RobotPart.h
configs/: menu.json
cursor_tools/: ICursor.h  create_box.cpp  create_box.h  create_robot.cpp  create_robot.h  select.cpp  select.h
gfx/shaders/: sprite.frag
shapes/: rectangle.cpp  rectangle.h  shape.h
